// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button examples ButtonAsLinkButtonComponent should render correctly 1`] = `
<div
  id="root0"
>
  <a
    class="v-button"
    href="./components/button"
    type="button"
    v-button=""
  >
     Primary action 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-0"
      v-icon-visa-chevron-right-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
        fill-rule="evenodd"
      />
    </svg>
  </a>
</div>
`;

exports[`Button examples DestructivePrimaryButtonComponent should render correctly 1`] = `
<div
  id="root1"
>
  <button
    class="v-button v-button-destructive"
    destructive=""
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-delete v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-1"
      v-icon-visa-delete-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M9 2.00049H16V4.00049H14V16.0005H2V6.00049H4V14.0005H12V4.00049H0V2.00049H7L7 0.000488281H9V2.00049Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M8.00008 10.4148L6.20718 12.2077L4.79297 10.7935L6.58586 9.00056L4.79297 7.20767L6.20718 5.79346L8.00008 7.58635L9.79297 5.79346L11.2072 7.20767L9.41429 9.00056L11.2072 10.7935L9.79297 12.2077L8.00008 10.4148Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000488281)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Destructive action
  </button>
</div>
`;

exports[`Button examples DestructiveSecondaryButtonComponent should render correctly 1`] = `
<div
  id="root2"
>
  <button
    buttoncolor="secondary"
    class="v-button v-button-destructive v-button-secondary"
    destructive=""
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-delete v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-2"
      v-icon-visa-delete-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M9 2.00049H16V4.00049H14V16.0005H2V6.00049H4V14.0005H12V4.00049H0V2.00049H7L7 0.000488281H9V2.00049Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M8.00008 10.4148L6.20718 12.2077L4.79297 10.7935L6.58586 9.00056L4.79297 7.20767L6.20718 5.79346L8.00008 7.58635L9.79297 5.79346L11.2072 7.20767L9.41429 9.00056L11.2072 10.7935L9.79297 12.2077L8.00008 10.4148Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000488281)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Destructive action
  </button>
</div>
`;

exports[`Button examples DestructiveTertiaryButtonComponent should render correctly 1`] = `
<div
  id="root3"
>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-destructive v-button-tertiary"
    destructive=""
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-delete v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-3"
      v-icon-visa-delete-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M9 2.00049H16V4.00049H14V16.0005H2V6.00049H4V14.0005H12V4.00049H0V2.00049H7L7 0.000488281H9V2.00049Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M8.00008 10.4148L6.20718 12.2077L4.79297 10.7935L6.58586 9.00056L4.79297 7.20767L6.20718 5.79346L8.00008 7.58635L9.79297 5.79346L11.2072 7.20767L9.41429 9.00056L11.2072 10.7935L9.79297 12.2077L8.00008 10.4148Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000488281)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Destructive action

  </button>
</div>
`;

exports[`Button examples IconButtonPrimaryAlternateButtonComponent should render correctly 1`] = `
<div
  id="root4"
>
  <button
    aria-label="primary action"
    class="v-alternate v-button v-button-icon"
    type="button"
    v-button-icon=""
    valternate=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-add v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-4"
      v-icon-visa-add-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9 7V0H7V7H0V9H7V16H9V9H16V7H9Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonPrimaryButtonComponent should render correctly 1`] = `
<div
  id="root9"
>
  <button
    aria-label="primary action"
    class="v-button v-button-icon"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-add v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-9"
      v-icon-visa-add-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9 7V0H7V7H0V9H7V16H9V9H16V7H9Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonPrimaryDisabledButtonComponent should render correctly 1`] = `
<div
  id="root5"
>
  <div
    class="v-flex v-flex-row"
    vflex=""
    vflexrow=""
  >
    <div
      class="v-gap-2 v-align-items-center v-flex v-flex-col"
      valignitemscenter=""
      vflex=""
      vflexcol=""
      vgap="2"
    >
      <button
        aria-labelledby="primary-icon-disabled-label"
        class="v-button v-button-icon"
        disabled="disabled"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-add v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-5"
          v-icon-visa-add-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M9 7V0H7V7H0V9H7V16H9V9H16V7H9Z"
            fill-rule="evenodd"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <span
        class="v-typography-label-small"
        id="primary-icon-disabled-label"
        style="color: var(--palette-default-disabled);"
        vtypography="label-small"
      >
         Action 
      </span>
    </div>
  </div>
</div>
`;

exports[`Button examples IconButtonPrimaryLabelButtonComponent should render correctly 1`] = `
<div
  id="root6"
>
  <div
    class="v-flex v-flex-row"
    vflex=""
    vflexrow=""
  >
    <div
      class="v-gap-2 v-align-items-center v-flex v-flex-col"
      valignitemscenter=""
      vflex=""
      vflexcol=""
      vgap="2"
    >
      <button
        aria-labelledby="primary-icon-label"
        class="v-button v-button-icon"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-add v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-6"
          v-icon-visa-add-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M9 7V0H7V7H0V9H7V16H9V9H16V7H9Z"
            fill-rule="evenodd"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <span
        class="v-typography-label-small"
        id="primary-icon-label"
        vtypography="label-small"
      >
        Action
      </span>
    </div>
  </div>
</div>
`;

exports[`Button examples IconButtonPrimaryLargeButtonComponent should render correctly 1`] = `
<div
  id="root7"
>
  <button
    aria-label="primary action"
    buttonsize="large"
    class="v-button v-button-icon v-button-large"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-add v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-7"
      v-icon-visa-add-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M13 11V0H11V11H0V13H11V24H13V13H24V11H13Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonPrimarySmallButtonComponent should render correctly 1`] = `
<div
  id="root8"
>
  <button
    aria-label="primary action"
    buttonsize="small"
    class="v-button v-button-icon v-button-small"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-add v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-8"
      v-icon-visa-add-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9 7V0H7V7H0V9H7V16H9V9H16V7H9Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonSecondaryAlternateButtonComponent should render correctly 1`] = `
<div
  id="root10"
>
  <button
    aria-label="secondary action"
    buttoncolor="secondary"
    class="v-alternate v-button v-button-icon v-button-secondary"
    type="button"
    v-button-icon=""
    valternate=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-connect v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-10"
      v-icon-visa-connect-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M7.69971 11.3646C8.14847 10.8713 8.4999 10.2878 8.72365 9.64453L10.1935 10.6059C10.696 10.2263 11.3217 10.0012 12 10.0012C13.6568 10.0012 15 11.3444 15 13.0012C15 14.6581 13.6568 16.0012 12 16.0012C10.3431 16.0012 8.99995 14.6581 8.99995 13.0012C8.99995 12.7502 9.03079 12.5063 9.08889 12.2732L7.69971 11.3646ZM13 13.0012C13 13.5535 12.5522 14.0012 12 14.0012C11.4477 14.0012 11 13.5535 11 13.0012C11 12.4489 11.4477 12.0012 12 12.0012C12.5522 12.0012 13 12.4489 13 13.0012Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M12 4.00098C12.5523 4.00098 13 3.55326 13 3.00098C13 2.44869 12.5523 2.00098 12 2.00098C11.4477 2.00098 11 2.44869 11 3.00098C11 3.55326 11.4477 4.00098 12 4.00098ZM12 6.00098C13.6569 6.00098 15 4.65783 15 3.00098C15 1.34412 13.6569 0.000976562 12 0.000976562C10.3431 0.000976562 9 1.34412 9 3.00098C9 3.25205 9.03084 3.49591 9.08894 3.72899L5.98997 5.75594C5.46043 5.28621 4.76353 5.00098 4 5.00098C2.34315 5.00098 1 6.34412 1 8.00098C1 9.65783 2.34315 11.001 4 11.001C5.65685 11.001 7 9.65783 7 8.00098C7 7.83417 6.98639 7.67055 6.96021 7.51115L10.1935 5.39633C10.696 5.77589 11.3217 6.00098 12 6.00098ZM4 9.00098C4.55228 9.00098 5 8.55326 5 8.00098C5 7.44869 4.55228 7.00098 4 7.00098C3.44772 7.00098 3 7.44869 3 8.00098C3 8.55326 3.44772 9.00098 4 9.00098Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000976562)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonSecondaryButtonComponent should render correctly 1`] = `
<div
  id="root14"
>
  <button
    aria-label="secondary action"
    buttoncolor="secondary"
    class="v-button v-button-icon v-button-secondary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-connect v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-14"
      v-icon-visa-connect-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M7.69971 11.3646C8.14847 10.8713 8.4999 10.2878 8.72365 9.64453L10.1935 10.6059C10.696 10.2263 11.3217 10.0012 12 10.0012C13.6568 10.0012 15 11.3444 15 13.0012C15 14.6581 13.6568 16.0012 12 16.0012C10.3431 16.0012 8.99995 14.6581 8.99995 13.0012C8.99995 12.7502 9.03079 12.5063 9.08889 12.2732L7.69971 11.3646ZM13 13.0012C13 13.5535 12.5522 14.0012 12 14.0012C11.4477 14.0012 11 13.5535 11 13.0012C11 12.4489 11.4477 12.0012 12 12.0012C12.5522 12.0012 13 12.4489 13 13.0012Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M12 4.00098C12.5523 4.00098 13 3.55326 13 3.00098C13 2.44869 12.5523 2.00098 12 2.00098C11.4477 2.00098 11 2.44869 11 3.00098C11 3.55326 11.4477 4.00098 12 4.00098ZM12 6.00098C13.6569 6.00098 15 4.65783 15 3.00098C15 1.34412 13.6569 0.000976562 12 0.000976562C10.3431 0.000976562 9 1.34412 9 3.00098C9 3.25205 9.03084 3.49591 9.08894 3.72899L5.98997 5.75594C5.46043 5.28621 4.76353 5.00098 4 5.00098C2.34315 5.00098 1 6.34412 1 8.00098C1 9.65783 2.34315 11.001 4 11.001C5.65685 11.001 7 9.65783 7 8.00098C7 7.83417 6.98639 7.67055 6.96021 7.51115L10.1935 5.39633C10.696 5.77589 11.3217 6.00098 12 6.00098ZM4 9.00098C4.55228 9.00098 5 8.55326 5 8.00098C5 7.44869 4.55228 7.00098 4 7.00098C3.44772 7.00098 3 7.44869 3 8.00098C3 8.55326 3.44772 9.00098 4 9.00098Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            transform="translate(0 0.000976562)"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples IconButtonSecondaryDisabledButtonComponent should render correctly 1`] = `
<div
  id="root11"
>
  <div
    class="v-flex v-flex-row"
    vflex=""
    vflexrow=""
  >
    <div
      class="v-gap-2 v-align-items-center v-flex v-flex-col"
      valignitemscenter=""
      vflex=""
      vflexcol=""
      vgap="2"
    >
      <button
        aria-labelledby="secondary-icon-disabled-label"
        buttoncolor="secondary"
        class="v-button v-button-icon v-button-secondary"
        disabled="disabled"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-connect v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-11"
          v-icon-visa-connect-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            clip-rule="evenodd"
            d="M7.69971 11.3646C8.14847 10.8713 8.4999 10.2878 8.72365 9.64453L10.1935 10.6059C10.696 10.2263 11.3217 10.0012 12 10.0012C13.6568 10.0012 15 11.3444 15 13.0012C15 14.6581 13.6568 16.0012 12 16.0012C10.3431 16.0012 8.99995 14.6581 8.99995 13.0012C8.99995 12.7502 9.03079 12.5063 9.08889 12.2732L7.69971 11.3646ZM13 13.0012C13 13.5535 12.5522 14.0012 12 14.0012C11.4477 14.0012 11 13.5535 11 13.0012C11 12.4489 11.4477 12.0012 12 12.0012C12.5522 12.0012 13 12.4489 13 13.0012Z"
            fill-rule="evenodd"
          />
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M12 4.00098C12.5523 4.00098 13 3.55326 13 3.00098C13 2.44869 12.5523 2.00098 12 2.00098C11.4477 2.00098 11 2.44869 11 3.00098C11 3.55326 11.4477 4.00098 12 4.00098ZM12 6.00098C13.6569 6.00098 15 4.65783 15 3.00098C15 1.34412 13.6569 0.000976562 12 0.000976562C10.3431 0.000976562 9 1.34412 9 3.00098C9 3.25205 9.03084 3.49591 9.08894 3.72899L5.98997 5.75594C5.46043 5.28621 4.76353 5.00098 4 5.00098C2.34315 5.00098 1 6.34412 1 8.00098C1 9.65783 2.34315 11.001 4 11.001C5.65685 11.001 7 9.65783 7 8.00098C7 7.83417 6.98639 7.67055 6.96021 7.51115L10.1935 5.39633C10.696 5.77589 11.3217 6.00098 12 6.00098ZM4 9.00098C4.55228 9.00098 5 8.55326 5 8.00098C5 7.44869 4.55228 7.00098 4 7.00098C3.44772 7.00098 3 7.44869 3 8.00098C3 8.55326 3.44772 9.00098 4 9.00098Z"
            fill-rule="evenodd"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000976562)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <span
        class="v-typography-label-small"
        id="secondary-icon-disabled-label"
        style="color: var(--palette-default-disabled);"
        vtypography="label-small"
      >
         Action 
      </span>
    </div>
  </div>
</div>
`;

exports[`Button examples IconButtonSecondaryLabelButtonComponent should render correctly 1`] = `
<div
  id="root12"
>
  <div
    class="v-flex v-flex-row"
    vflex=""
    vflexrow=""
  >
    <div
      class="v-gap-2 v-align-items-center v-flex v-flex-col"
      valignitemscenter=""
      vflex=""
      vflexcol=""
      vgap="2"
    >
      <button
        aria-labelledby="secondary-icon-label"
        buttoncolor="secondary"
        class="v-button v-button-icon v-button-secondary"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-connect v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-12"
          v-icon-visa-connect-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            clip-rule="evenodd"
            d="M7.69971 11.3646C8.14847 10.8713 8.4999 10.2878 8.72365 9.64453L10.1935 10.6059C10.696 10.2263 11.3217 10.0012 12 10.0012C13.6568 10.0012 15 11.3444 15 13.0012C15 14.6581 13.6568 16.0012 12 16.0012C10.3431 16.0012 8.99995 14.6581 8.99995 13.0012C8.99995 12.7502 9.03079 12.5063 9.08889 12.2732L7.69971 11.3646ZM13 13.0012C13 13.5535 12.5522 14.0012 12 14.0012C11.4477 14.0012 11 13.5535 11 13.0012C11 12.4489 11.4477 12.0012 12 12.0012C12.5522 12.0012 13 12.4489 13 13.0012Z"
            fill-rule="evenodd"
          />
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M12 4.00098C12.5523 4.00098 13 3.55326 13 3.00098C13 2.44869 12.5523 2.00098 12 2.00098C11.4477 2.00098 11 2.44869 11 3.00098C11 3.55326 11.4477 4.00098 12 4.00098ZM12 6.00098C13.6569 6.00098 15 4.65783 15 3.00098C15 1.34412 13.6569 0.000976562 12 0.000976562C10.3431 0.000976562 9 1.34412 9 3.00098C9 3.25205 9.03084 3.49591 9.08894 3.72899L5.98997 5.75594C5.46043 5.28621 4.76353 5.00098 4 5.00098C2.34315 5.00098 1 6.34412 1 8.00098C1 9.65783 2.34315 11.001 4 11.001C5.65685 11.001 7 9.65783 7 8.00098C7 7.83417 6.98639 7.67055 6.96021 7.51115L10.1935 5.39633C10.696 5.77589 11.3217 6.00098 12 6.00098ZM4 9.00098C4.55228 9.00098 5 8.55326 5 8.00098C5 7.44869 4.55228 7.00098 4 7.00098C3.44772 7.00098 3 7.44869 3 8.00098C3 8.55326 3.44772 9.00098 4 9.00098Z"
            fill-rule="evenodd"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000976562)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
      <span
        class="v-typography-label-small"
        id="secondary-icon-label"
        vtypography="label-small"
      >
         Action 
      </span>
    </div>
  </div>
</div>
`;

exports[`Button examples IconButtonSecondaryLargeButtonComponent should render correctly 1`] = `
<div
  id="root13"
>
  <button
    aria-label="secondary action"
    buttoncolor="secondary"
    buttonsize="large"
    class="v-button v-button-icon v-button-large v-button-secondary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-connect v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-13"
      v-icon-visa-connect-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M12 16.501C12 17.3294 11.3284 18.001 10.5 18.001C9.67157 18.001 9 17.3294 9 16.501C9 15.6725 9.67157 15.001 10.5 15.001C11.3284 15.001 12 15.6725 12 16.501ZM17 24.001C19.2091 24.001 21 22.2101 21 20.001C21 17.7918 19.2091 16.001 17 16.001C14.7909 16.001 13 17.7918 13 20.001C13 22.2101 14.7909 24.001 17 24.001ZM17 22.001C18.1046 22.001 19 21.1055 19 20.001C19 18.8964 18.1046 18.001 17 18.001C15.8954 18.001 15 18.8964 15 20.001C15 21.1055 15.8954 22.001 17 22.001Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M17 8.00098C19.2091 8.00098 21 6.21012 21 4.00098C21 1.79184 19.2091 0.000976562 17 0.000976562C14.7909 0.000976562 13 1.79184 13 4.00098C13 4.46238 13.0781 4.90553 13.2219 5.31793L7.66788 9.02058C6.96006 8.38655 6.02506 8.00098 5 8.00098C2.79086 8.00098 1 9.79184 1 12.001C1 14.2101 2.79086 16.001 5 16.001C7.20914 16.001 9 14.2101 9 12.001C9 11.5396 8.92189 11.0965 8.77816 10.6841L14.3322 6.98142C15.04 7.61542 15.975 8.00098 17 8.00098ZM17 6.00098C18.1046 6.00098 19 5.10555 19 4.00098C19 2.89641 18.1046 2.00098 17 2.00098C15.8954 2.00098 15 2.89641 15 4.00098C15 5.10555 15.8954 6.00098 17 6.00098ZM5 14.001C6.10457 14.001 7 13.1055 7 12.001C7 10.8964 6.10457 10.001 5 10.001C3.89543 10.001 3 10.8964 3 12.001C3 13.1055 3.89543 14.001 5 14.001Z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples PrimaryAlternateButtonComponent should render correctly 1`] = `
<div
  id="root15"
>
  <button
    class="v-alternate v-button"
    type="button"
    v-button=""
    valternate=""
  >
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryDefaultButtonComponent should render correctly 1`] = `
<div
  id="root16"
>
  <button
    class="v-button"
    type="button"
    v-button=""
  >
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryDisabledButtonComponent should render correctly 1`] = `
<div
  id="root17"
>
  <button
    class="v-button"
    disabled="disabled"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-15"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M0 10H2V14H14V10H16V16H0V10Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9.00062 3.86585L11.0762 5.97354L12.5012 4.57022L8.71313 0.72353L8.00062 0L7.28811 0.72353L3.5 4.57022L4.92502 5.97354L7.00062 3.86585V12.0036H9.00062V3.86585Z"
        fill-rule="evenodd"
      />
    </svg>
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryLargeButtonComponent should render correctly 1`] = `
<div
  id="root18"
>
  <button
    buttonsize="large"
    class="v-button v-icon-two-color v-button-large"
    type="button"
    v-button=""
    v-icon-two-color=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-16"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M0 10H2V14H14V10H16V16H0V10Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9.00062 3.86585L11.0762 5.97354L12.5012 4.57022L8.71313 0.72353L8.00062 0L7.28811 0.72353L3.5 4.57022L4.92502 5.97354L7.00062 3.86585V12.0036H9.00062V3.86585Z"
        fill-rule="evenodd"
      />
    </svg>
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryLeadingIconButtonComponent should render correctly 1`] = `
<div
  id="root19"
>
  <button
    class="v-button v-icon-two-color"
    type="button"
    v-button=""
    v-icon-two-color=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-17"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M0 10H2V14H14V10H16V16H0V10Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9.00062 3.86585L11.0762 5.97354L12.5012 4.57022L8.71313 0.72353L8.00062 0L7.28811 0.72353L3.5 4.57022L4.92502 5.97354L7.00062 3.86585V12.0036H9.00062V3.86585Z"
        fill-rule="evenodd"
      />
    </svg>
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimarySmallButtonComponent should render correctly 1`] = `
<div
  id="root20"
>
  <button
    buttonsize="small"
    class="v-button v-icon-two-color v-button-small"
    type="button"
    v-button=""
    v-icon-two-color=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-18"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M0 10H2V14H14V10H16V16H0V10Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9.00062 3.86585L11.0762 5.97354L12.5012 4.57022L8.71313 0.72353L8.00062 0L7.28811 0.72353L3.5 4.57022L4.92502 5.97354L7.00062 3.86585V12.0036H9.00062V3.86585Z"
        fill-rule="evenodd"
      />
    </svg>
    Primary action
  </button>
</div>
`;

exports[`Button examples PrimaryTrailingIconButtonComponent should render correctly 1`] = `
<div
  id="root21"
>
  <button
    class="v-button v-icon-two-color"
    type="button"
    v-button=""
    v-icon-two-color=""
  >
     Primary action 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-file-upload v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-19"
      v-icon-visa-file-upload-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M0 10H2V14H14V10H16V16H0V10Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9.00062 3.86585L11.0762 5.97354L12.5012 4.57022L8.71313 0.72353L8.00062 0L7.28811 0.72353L3.5 4.57022L4.92502 5.97354L7.00062 3.86585V12.0036H9.00062V3.86585Z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples SecondaryAlternateButtonComponent should render correctly 1`] = `
<div
  id="root22"
>
  <button
    buttoncolor="secondary"
    class="v-alternate v-button v-button-secondary"
    type="button"
    v-button=""
    valternate=""
  >
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondaryDefaultButtonComponent should render correctly 1`] = `
<div
  id="root23"
>
  <button
    buttoncolor="secondary"
    class="v-button v-button-secondary"
    type="button"
    v-button=""
  >
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondaryDisabledButtonComponent should render correctly 1`] = `
<div
  id="root24"
>
  <button
    buttoncolor="secondary"
    class="v-button v-button-secondary"
    disabled="disabled"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-20"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 16L4.5 12.2579L5.83962 10.8217L7.0566 12.1365V8H8.9434V12.1365L10.1604 10.8217L11.5 12.2579L8 16Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M0 2H8V0H0V2ZM14 14V6H2V14H3V16H0V4H16V16H13V14H14Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondaryLargeButtonComponent should render correctly 1`] = `
<div
  id="root25"
>
  <button
    buttoncolor="secondary"
    buttonsize="large"
    class="v-button v-button-large v-button-secondary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-21"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 16L4.5 12.2579L5.83962 10.8217L7.0566 12.1365V8H8.9434V12.1365L10.1604 10.8217L11.5 12.2579L8 16Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M0 2H8V0H0V2ZM14 14V6H2V14H3V16H0V4H16V16H13V14H14Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondaryLeadingIconButtonComponent should render correctly 1`] = `
<div
  id="root26"
>
  <button
    buttoncolor="secondary"
    class="v-button v-button-secondary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-22"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 16L4.5 12.2579L5.83962 10.8217L7.0566 12.1365V8H8.9434V12.1365L10.1604 10.8217L11.5 12.2579L8 16Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M0 2H8V0H0V2ZM14 14V6H2V14H3V16H0V4H16V16H13V14H14Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
    Secondary action
  </button>
</div>
`;

exports[`Button examples SecondarySmallButtonComponent should render correctly 1`] = `
<div
  id="root27"
>
  <button
    buttoncolor="secondary"
    buttonsize="small"
    class="v-button v-button-secondary v-button-small"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-23"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 16L4.5 12.2579L5.83962 10.8217L7.0566 12.1365V8H8.9434V12.1365L10.1604 10.8217L11.5 12.2579L8 16Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M0 2H8V0H0V2ZM14 14V6H2V14H3V16H0V4H16V16H13V14H14Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Secondary action

  </button>
</div>
`;

exports[`Button examples SecondaryTrailingIconButtonComponent should render correctly 1`] = `
<div
  id="root28"
>
  <button
    buttoncolor="secondary"
    class="v-button v-button-secondary"
    type="button"
    v-button=""
  >
     Secondary action 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-save v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-24"
      v-icon-visa-save-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 16L4.5 12.2579L5.83962 10.8217L7.0566 12.1365V8H8.9434V12.1365L10.1604 10.8217L11.5 12.2579L8 16Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M0 2H8V0H0V2ZM14 14V6H2V14H3V16H0V4H16V16H13V14H14Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples StackedIconButtonAlternateButtonComponent should render correctly 1`] = `
<div
  id="root29"
>
  <button
    aria-label="Glossary"
    buttoncolor="tertiary"
    class="v-alternate v-button v-button-stacked v-button-tertiary"
    type="button"
    v-button-stacked=""
    valternate=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-glossary v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-25"
      v-icon-visa-glossary-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M5 6H9V8H5V6ZM5 10H9V12H5V10ZM9 14H5V16H9V14ZM15 6H19V8H15V6ZM19 10H15V12H19V10ZM15 14H19V16H15V14Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.3 23H12.71L14.41 21.2672H21C22.1 21.2672 23 20.3551 23 19.2404V3.02672C23 1.91202 22.1 1 21 1H3C1.9 1 1 1.91202 1 3.02672V19.2404C1 20.3551 1.9 21.2672 3 21.2672H9.59L11.3 23ZM3 19.2404V3.02672H11V19.8383C10.63 19.4532 10.12 19.2404 9.59 19.2404H3ZM14.41 19.2404C13.89 19.2404 13.37 19.4634 13 19.8383V3.02672H21V19.2404H14.41Z"
        fill-rule="evenodd"
      />
    </svg>
     Action

  </button>
</div>
`;

exports[`Button examples StackedIconButtonDefaultButtonComponent should render correctly 1`] = `
<div
  id="root30"
>
  <button
    aria-label="Glossary"
    buttoncolor="tertiary"
    class="v-button v-button-stacked v-button-tertiary"
    type="button"
    v-button-stacked=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-glossary v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-26"
      v-icon-visa-glossary-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M5 6H9V8H5V6ZM5 10H9V12H5V10ZM9 14H5V16H9V14ZM15 6H19V8H15V6ZM19 10H15V12H19V10ZM15 14H19V16H15V14Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.3 23H12.71L14.41 21.2672H21C22.1 21.2672 23 20.3551 23 19.2404V3.02672C23 1.91202 22.1 1 21 1H3C1.9 1 1 1.91202 1 3.02672V19.2404C1 20.3551 1.9 21.2672 3 21.2672H9.59L11.3 23ZM3 19.2404V3.02672H11V19.8383C10.63 19.4532 10.12 19.2404 9.59 19.2404H3ZM14.41 19.2404C13.89 19.2404 13.37 19.4634 13 19.8383V3.02672H21V19.2404H14.41Z"
        fill-rule="evenodd"
      />
    </svg>
     Action

  </button>
</div>
`;

exports[`Button examples TertiaryAlternateButtonComponent should render correctly 1`] = `
<div
  id="root31"
>
  <button
    buttoncolor="tertiary"
    class="v-alternate v-button v-button-tertiary"
    type="button"
    v-button=""
    valternate=""
  >
    Tertiary action
  </button>
</div>
`;

exports[`Button examples TertiaryDefaultButtonComponent should render correctly 1`] = `
<div
  id="root32"
>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-tertiary"
    type="button"
    v-button=""
  >
    Tertiary action
  </button>
</div>
`;

exports[`Button examples TertiaryDisabledButtonComponent should render correctly 1`] = `
<div
  id="root33"
>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-tertiary"
    disabled="disabled"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-27"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M7 4H9V7.19575L10.47 6.277L11.53 7.973L7 10.8042V4Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8C14 11.3137 11.3137 14 8 14V16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 10.3904 1.0484 12.5348 2.70861 14H1V16H6V11H4V12.4724C2.77174 11.3731 2 9.77615 2 8Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Tertiary action

  </button>
</div>
`;

exports[`Button examples TertiaryLargeButtonComponent should render correctly 1`] = `
<div
  id="root34"
>
  <button
    buttoncolor="tertiary"
    buttonsize="large"
    class="v-button v-button-large v-button-tertiary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-28"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M7 4H9V7.19575L10.47 6.277L11.53 7.973L7 10.8042V4Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8C14 11.3137 11.3137 14 8 14V16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 10.3904 1.0484 12.5348 2.70861 14H1V16H6V11H4V12.4724C2.77174 11.3731 2 9.77615 2 8Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Large Tertiary action

  </button>
</div>
`;

exports[`Button examples TertiaryLeadingIconButtonComponent should render correctly 1`] = `
<div
  id="root35"
>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-tertiary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-29"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M7 4H9V7.19575L10.47 6.277L11.53 7.973L7 10.8042V4Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8C14 11.3137 11.3137 14 8 14V16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 10.3904 1.0484 12.5348 2.70861 14H1V16H6V11H4V12.4724C2.77174 11.3731 2 9.77615 2 8Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Tertiary action

  </button>
</div>
`;

exports[`Button examples TertiarySmallButtonComponent should render correctly 1`] = `
<div
  id="root36"
>
  <button
    buttoncolor="tertiary"
    buttonsize="small"
    class="v-button v-button-small v-button-tertiary"
    type="button"
    v-button=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-30"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M7 4H9V7.19575L10.47 6.277L11.53 7.973L7 10.8042V4Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8C14 11.3137 11.3137 14 8 14V16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 10.3904 1.0484 12.5348 2.70861 14H1V16H6V11H4V12.4724C2.77174 11.3731 2 9.77615 2 8Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Small button

  </button>
</div>
`;

exports[`Button examples TertiaryTrailingIconButtonComponent should render correctly 1`] = `
<div
  id="root37"
>
  <button
    buttoncolor="tertiary"
    class="v-button v-button-tertiary"
    type="button"
    v-button=""
  >
     Tertiary action 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-history v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-31"
      v-icon-visa-history-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M7 4H9V7.19575L10.47 6.277L11.53 7.973L7 10.8042V4Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8C14 11.3137 11.3137 14 8 14V16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 10.3904 1.0484 12.5348 2.70861 14H1V16H6V11H4V12.4724C2.77174 11.3731 2 9.77615 2 8Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconAlternateButtonComponent should render correctly 1`] = `
<div
  id="root38"
>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    class="v-alternate v-button v-button-icon v-button-tertiary"
    type="button"
    v-button-icon=""
    valternate=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-32"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6V10H15V12H14H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H3H1V10H3H5H11H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6ZM7 12V13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7Z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconBadgeButtonComponent should render correctly 1`] = `
<div
  id="root39"
>
  <button
    aria-describedby="a-v-badge-0"
    aria-label="notifications"
    buttoncolor="tertiary"
    class="v-button v-button-icon v-button-tertiary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-33"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6V10H15V12H14H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H3H1V10H3H5H11H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6ZM7 12V13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7Z"
        fill-rule="evenodd"
      />
    </svg>
    <sup
      aria-label="9 unread notifications"
      class="v-badge v-badge-default v-badge-number v-typography-label-active"
      id="a-v-badge-0"
      number=""
      v-badge=""
      vtypography="label-active"
    >
      9
    </sup>
  </button>
</div>
`;

exports[`Button examples UiIconLargeButtonComponent should render correctly 1`] = `
<div
  id="root40"
>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    buttonsize="large"
    class="v-button v-button-icon v-button-large v-button-tertiary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-low v-icon-notifications v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-34"
      v-icon-visa-notifications-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M12 0C8.13401 0 5 3.13401 5 7V14H7V7C7 4.23858 9.23858 2 12 2C14.7614 2 17 4.2386 17 7.00003V11C17 12.9259 17.8249 14.2261 18.9157 15.0115C19.5873 15.4951 20.3332 15.7664 21 15.8979V16H1V18H22C22.5523 18 23 17.5523 23 17V15C23 14.4477 22.5523 14 22 14C21.4934 14 20.7111 13.8398 20.0843 13.3885C19.5085 12.9739 19 12.2741 19 11V7.00003C19 3.13404 15.866 0 12 0ZM12 6C12.5523 6 13 6.44772 13 7V11H15V7C15 5.34315 13.6569 4 12 4V6Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M9 20V21C9 22.6569 10.3431 24 12 24C13.6569 24 15 22.6569 15 21V20H13V21C13 21.5523 12.5523 22 12 22C11.4477 22 11 21.5523 11 21V20H9Z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconMediumButtonComponent should render correctly 1`] = `
<div
  id="root41"
>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    class="v-button v-button-icon v-button-tertiary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-35"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6V10H15V12H14H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H3H1V10H3H5H11H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6ZM7 12V13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7Z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconSmallButtonComponent should render correctly 1`] = `
<div
  id="root42"
>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    buttonsize="small"
    class="v-button v-button-icon v-button-small v-button-tertiary"
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-36"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6V10H15V12H14H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H3H1V10H3H5H11H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6ZM7 12V13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7Z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Button examples UiIconSubtleButtonComponent should render correctly 1`] = `
<div
  id="root43"
>
  <button
    aria-label="notifications"
    buttoncolor="tertiary"
    class="v-button v-button-icon v-button-subtle v-button-tertiary"
    subtle=""
    type="button"
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-notifications v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-37"
      v-icon-visa-notifications-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M2 6C2 2.68629 4.68629 0 8 0C11.3137 0 14 2.68629 14 6V10H15V12H14H11V13C11 14.6569 9.65685 16 8 16C6.34315 16 5 14.6569 5 13V12H3H1V10H3H5H11H12V6C12 3.79086 10.2091 2 8 2C5.79086 2 4 3.79086 4 6V8H2V6ZM7 12V13C7 13.5523 7.44772 14 8 14C8.55228 14 9 13.5523 9 13V12H7Z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;
